--- a/WebCamMap/Main.storyboard
+++ b/WebCamMap/Main.storyboard
@@ -45,7 +45,6 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="zef-T7-x9o" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.5" id="5Wi-6q-Aaf"/>
-                            <constraint firstItem="zef-T7-x9o" firstAttribute="leading" secondItem="O98-Bf-jfE" secondAttribute="trailing" constant="-374" id="6g6-uZ-TjJ"/>
                             <constraint firstItem="O98-Bf-jfE" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="CdK-1f-n4W"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="zef-T7-x9o" secondAttribute="trailing" constant="20" id="IDZ-yX-4kV"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="O98-Bf-jfE" secondAttribute="trailing" constant="20" id="PbG-6l-A7F"/>
@@ -90,7 +89,7 @@
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WebCamTitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fnr-G3-TAU">
-                                            <rect key="frame" x="83" y="17" width="309" height="32"/>
+                                            <rect key="frame" x="83" y="22.5" width="309" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -99,10 +98,9 @@
                                     <constraints>
                                         <constraint firstItem="Fnr-G3-TAU" firstAttribute="leading" secondItem="7bm-GB-6y4" secondAttribute="trailing" constant="8" id="4zj-BS-6d5"/>
                                         <constraint firstAttribute="bottom" secondItem="7bm-GB-6y4" secondAttribute="bottom" constant="1" id="EgK-p6-5Xh"/>
-                                        <constraint firstItem="Fnr-G3-TAU" firstAttribute="top" secondItem="5Ge-SD-m8w" secondAttribute="topMargin" constant="6" id="bIF-tl-AQN"/>
+                                        <constraint firstItem="7bm-GB-6y4" firstAttribute="centerY" secondItem="5Ge-SD-m8w" secondAttribute="centerY" id="ah5-4a-9nB"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="Fnr-G3-TAU" secondAttribute="trailing" constant="2" id="kPA-lT-qbG"/>
                                         <constraint firstItem="7bm-GB-6y4" firstAttribute="leading" secondItem="5Ge-SD-m8w" secondAttribute="leading" constant="11" id="lvW-yP-rof"/>
-                                        <constraint firstItem="7bm-GB-6y4" firstAttribute="top" secondItem="5Ge-SD-m8w" secondAttribute="top" constant="1" id="sSB-jz-FAW"/>
                                         <constraint firstItem="Fnr-G3-TAU" firstAttribute="centerY" secondItem="5Ge-SD-m8w" secondAttribute="centerY" id="zCt-Xz-svm"/>
                                     </constraints>
                                 </tableViewCellContentView>
@@ -121,7 +119,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OZi-Cv-Y72" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1679.7101449275362" y="-325.44642857142856"/>
+            <point key="canvasLocation" x="2009" y="76"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="kgG-Z6-6wi">
