Removed custom cell, and added tableviewcontroller with subtitle style cell.

--- a/WebCamMap/Main.storyboard
+++ b/WebCamMap/Main.storyboard
@@ -59,69 +59,12 @@
                     <connections>
                         <outlet property="citiesTableView" destination="O98-Bf-jfE" id="Fra-dV-X2H"/>
                         <outlet property="mapView" destination="zef-T7-x9o" id="f35-a4-dyY"/>
-                        <segue destination="C0N-Hf-53v" kind="show" identifier="showWebCamInfo" id="4z7-tQ-FkW"/>
+                        <segue destination="A3z-qF-A62" kind="show" identifier="showWebCamInfo" id="DfI-2J-QAN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="831.88405797101461" y="75.669642857142847"/>
-        </scene>
-        <!--Web Cam Info Table View Controller-->
-        <scene sceneID="Gn3-gs-UwJ">
-            <objects>
-                <tableViewController id="C0N-Hf-53v" customClass="WebCamInfoTableViewController" customModule="WebCamMap" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="xuj-C8-daT">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="webCamInfoCell" rowHeight="66" id="zPr-Jv-PHU" customClass="WebCamInfoTableViewCell" customModule="WebCamMap" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="66"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="zPr-Jv-PHU" id="5Ge-SD-m8w">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="66"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7bm-GB-6y4">
-                                            <rect key="frame" x="11" y="1" width="64" height="64"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="64" id="ihJ-xP-unf"/>
-                                            </constraints>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WebCamTitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fnr-G3-TAU">
-                                            <rect key="frame" x="83" y="20.5" width="309" height="25.5"/>
-                                            <color key="backgroundColor" red="0.8186762541" green="0.9017027165" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="21"/>
-                                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstItem="Fnr-G3-TAU" firstAttribute="leading" secondItem="7bm-GB-6y4" secondAttribute="trailing" constant="8" id="4zj-BS-6d5"/>
-                                        <constraint firstAttribute="bottom" secondItem="7bm-GB-6y4" secondAttribute="bottom" constant="1" id="EgK-p6-5Xh"/>
-                                        <constraint firstItem="7bm-GB-6y4" firstAttribute="centerY" secondItem="5Ge-SD-m8w" secondAttribute="centerY" id="ah5-4a-9nB"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="Fnr-G3-TAU" secondAttribute="trailing" constant="2" id="kPA-lT-qbG"/>
-                                        <constraint firstItem="7bm-GB-6y4" firstAttribute="leading" secondItem="5Ge-SD-m8w" secondAttribute="leading" constant="11" id="lvW-yP-rof"/>
-                                        <constraint firstItem="Fnr-G3-TAU" firstAttribute="centerY" secondItem="5Ge-SD-m8w" secondAttribute="centerY" id="zCt-Xz-svm"/>
-                                    </constraints>
-                                </tableViewCellContentView>
-                                <color key="backgroundColor" red="0.8186762541" green="0.9017027165" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <connections>
-                                    <outlet property="webCamImage" destination="7bm-GB-6y4" id="37v-3X-4SV"/>
-                                    <outlet property="webCamTitle" destination="Fnr-G3-TAU" id="z6P-GP-27W"/>
-                                </connections>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="C0N-Hf-53v" id="xFp-mS-krh"/>
-                            <outlet property="delegate" destination="C0N-Hf-53v" id="IXJ-Em-d95"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" id="Ihd-aG-idn"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="OZi-Cv-Y72" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2009" y="76"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="kgG-Z6-6wi">
@@ -141,5 +84,58 @@
             </objects>
             <point key="canvasLocation" x="-78.260869565217391" y="75.669642857142847"/>
         </scene>
+        <!--Web Cam Info Table View Controller-->
+        <scene sceneID="uuJ-Ld-5pl">
+            <objects>
+                <tableViewController id="A3z-qF-A62" customClass="WebCamInfoTableViewController" customModule="WebCamMap" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="k1k-NP-WJc">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="showWebCamInfo" textLabel="uq8-KM-O4g" detailTextLabel="IHh-6d-fsK" imageView="BhC-19-p9y" style="IBUITableViewCellStyleSubtitle" id="xI6-ck-Mj5">
+                                <rect key="frame" x="0.0" y="28" width="414" height="55.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xI6-ck-Mj5" id="fPS-MX-qu8">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="55.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="uq8-KM-O4g">
+                                            <rect key="frame" x="59" y="10" width="33.5" height="20.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="IHh-6d-fsK">
+                                            <rect key="frame" x="59" y="31.5" width="44" height="14.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" image="camera" catalog="system" id="BhC-19-p9y">
+                                            <rect key="frame" x="20" y="18" width="24" height="18"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </imageView>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <color key="backgroundColor" red="0.8186762541" green="0.9017027165" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="A3z-qF-A62" id="OMh-kq-YMb"/>
+                            <outlet property="delegate" destination="A3z-qF-A62" id="AwT-yO-M70"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="rgw-M9-knI"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="b0V-1d-Cwr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1967" y="76"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="camera" catalog="system" width="128" height="96"/>
+    </resources>
 </document>
